--- a/Views/UserRoles/Index.cshtml
+++ b/Views/UserRoles/Index.cshtml
@@ -30,6 +30,6 @@
         }
     </tbody>
     <td>
-        <a class="btn btn-primary" asp-controller="UserRoles" asp-action="Create" asp-route-previous="">Manage Roles</a>
+        <a class="btn btn-primary" asp-controller="UserRoles" asp-action="Create" asp-route-previous="">Create New Employee</a>
     </td>
 </table>
