--- a/Views/UserRoles/Manage.cshtml
+++ b/Views/UserRoles/Manage.cshtml
@@ -7,7 +7,7 @@
     <div class="card">
         <div class="card-header">
             <h2>Manage User Roles</h2>
-            Add/Remove Roles for User / @ViewBag.UserName.
+            Add/Remove Roles for User @ViewBag.UserName.
         </div>
         <div class="card-body">
             @for (int i = 0; i < Model.Count; i++)
@@ -23,6 +23,7 @@
             }
             <div asp-validation-summary="All" class="text-danger"></div>
         </div>
+        <p>@ViewBag.refer</p>
         <div class="card-footer">
             @using (Html.BeginForm())
             {
