fixed one bugged line is sales report

--- a/Views/SalesReport/Index.cshtml
+++ b/Views/SalesReport/Index.cshtml
@@ -23,7 +23,7 @@
                         Total sold: @Html.DisplayFor(modelItem => item.Quantity)
                     </td>
                     <td>
-                        @*Total Revenue: @Html.DisplayFor(modelItem => item.Quantity * item.UnitPrice)*@
+                        Total Revenue: @((item.Quantity*item.UnitPrice).ToString("c"))
                     </td>
                 }
             </tr>
