fixed user role edit redirect

--- a/Views/UserRoles/Index.cshtml
+++ b/Views/UserRoles/Index.cshtml
@@ -50,3 +50,10 @@
         }
     </td>
 </table>
+
+<style>
+    h1, th, td {
+        color: #DEC20B;
+        font-weight: bold;
+    }
+</style>
