--- a/Views/UserRoles/Create.cshtml
+++ b/Views/UserRoles/Create.cshtml
@@ -9,11 +9,6 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            @*TODO FIX THIS*@
-            @*@using (Html.BeginForm())
-            {
-            <input type="hidden" name="returnUrl" value="@ViewBag.refer" />
-            }*@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="grid-container">
                 <div class="left-div">
@@ -81,9 +76,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-                <input type="reset" value="Reset" class="btn btn-primary" />
+                @using (Html.BeginForm())
+                {
+                    <input type="hidden" name="returnUrl" value="@ViewBag.refer" />
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="reset" value="Reset" class="btn btn-primary" />
+                }
             </div>
+            <p>refer @ViewBag</p>
         </form>
     </div>
 </div>
