Carousel made bigger for the 3rd time, somehow code keeps on disapperaing

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,11 +11,11 @@
         <img src="~/images/CovidProtocol.jpg" style="margin:15px" class="text-center" alt="Covid Protocol"/>
     </center>
 </div>
-<div id="TopPicksCarousel" class="carousel slide" data-ride="carousel" style="height:200px">
+<div id="TopPicksCarousel" class="carousel slide" data-ride="carousel" style="height:500px">
 
     
     <div class="carousel-inner">
-        <a class="carousel-item active" href="#PepperoniItemPage" style="text-decoration:none">
+        <a class="carousel-item active" href="Menu" style="text-decoration:none">
             <div class="d-flex">
                 <div class="carousel-item-left flex-row p-2">
                     <!--https://images.unsplash.com/photo-1564128442383-9201fcc740eb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=931&q=80-->
@@ -30,7 +30,7 @@
         </a>
 
 
-        <a class="carousel-item" href="#AllDressedItemPage" style="text-decoration:none">
+        <a class="carousel-item" href="Menu" style="text-decoration:none">
             <div class="d-flex">
                 <div class="carousel-item-left flex-row p-2" >
                     <!--https://images.unsplash.com/photo-1506354666786-959d6d497f1a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80-->
@@ -43,7 +43,7 @@
             </div>
         </a>
 
-        <a class="carousel-item" href="#CheeseItemPage" style="text-decoration:none">
+        <a class="carousel-item" href="Menu" style="text-decoration:none">
             <div class="d-flex">
                 <div class="carousel-item-left flex-row p-2">
                     <!--https://kirbiecravings.com/flourless-cheese-crust-pizza/-->
@@ -56,7 +56,7 @@
             </div>
         </a>
 
-        <a class="carousel-item" href="#VegetarianItemPage" style="text-decoration:none">
+        <a class="carousel-item" href="Menu" style="text-decoration:none">
             <div class="d-flex">
                 <div class="carousel-item-left flex-row p-2">
                     <!--https://images.unsplash.com/photo-1574126154517-d1e0d89ef734?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80-->
@@ -87,20 +87,22 @@
     <!--https://cdn.restomenu.com/web/img/section/1534/ffc928f085699816f261d5a88f14e2e3.jpg-->
     <a class="deal-item" href="#DoubleDeal" style="text-decoration: none;">
         <img src="~/images/2P2D1F.jpg" style="height:300px; width:400px" />
-        <p class="deal-item-text my-0">Deal 1: 2 Medium Pizzas, 2 Cans of your choice and Large fries for $35.99</p>
+        <p class="deal-item-text my-0">Deal 1: 2 Medium Pepperoni Pizzas, 2 Cans of Pepsi and fries for $31.50. SAVE 10$!!!</p>
     </a>
+    <button class="btn btn-primary" type="button">Add To Cart</button>
     <!--https://cdn.restomenu.com/web/img/section/3102/c3a6874cfb8426555bf21b5dccf5ae5f.jpg-->
     <a class="deal-item" href="#SingleDeal" style="text-decoration: none;">
         <img src="~/images/1P1D1F.jpg" style="height:300px; width:400px" />
-        <p class="deal-item-text my-0">Deal 2: 1 Medium Pizzas, 1 Can of your choice and Medium fries for $15.99</p>
+        <p class="deal-item-text my-0">Deal 2: 1 Medium Pepperoni Pizza, 1 Can of Pepsi and fries for $17.50. Save 5$!!!</p>
     </a>
+    <button class="btn btn-primary" type="button">Add To Cart</button>
 </div>
 
 <style>
     .fav-items-image{
         display: block;
         max-width: 100%;
-        max-height: 200px;
+        max-height: 500px;
         width: auto;
         height: auto;
         padding-left: 25%;
@@ -120,6 +122,16 @@
         color: #DEC20B;
         font-weight: bold;
     }
-    
+    .carousel-item-right h4 {
+        font-size: 40px;
+    }
+
+    .carousel-item-right p {
+        font-size: 25px;
+    }
+
+    .carousel-item-right {
+        width: 325px;
+    }
     
 </style>
